# ESP32_C3_SoftSwitch

./: LICENSE
Source/: .gitignore  CMakeLists.txt
Source/main/: CMakeLists.txt  hardwareInterface.h  main.c  softSwitcher.c  softSwitcher.h
Source/main/sensors/: adcController.c  adcController.h  electricalController.h  temperatureController.c  temperatureController.h
Source/main/userInterface/: buttonController.c  buttonController.h  ledController.h  userInterface.c  userInterface.h
